dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
/* ... */
.case-email-selected {
    border: 1px solid #cccccc;
    padding-left: 2px;
    padding-right: 2px;
    margin: 2px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    background-color: #e6e6e6;
    display: inline;
    line-height: 20px;
}

.case-send-emails-div-readonly {
    cursor: not-allowed;
    background-color: #eeeeee;
}

.case-popup-div {
    min-height: 80px;
    width: 95% !important;
}

.case-div-standardtext {
    padding: 1em !important;
    font-size: 0.9em;
    cursor: pointer;
}

.case-standardtext-space {
    white-space: pre-line;
    line-height: 1;
    font-size: 14px;
}

.case-div-standardtext-accordion {
    max-width: 35em;
    min-width: 35em;
}

.case-standardText-keep-open {
    z-index: 10001;
}

table.table-add-order-field-type tr td:first-child {
    width: 80%;
}

.nowrap {
    white-space: nowrap;
}

td.align-right {
    text-align: right;
}

td.align-center {
    text-align: center;
}

.table-striped tbody > tr.expanded-row:nth-child(odd) > td,
.table-striped tbody > tr.expanded-row:nth-child(odd) > th {
    background-color: #f4f9fc;
}

.table-striped tbody > tr.expanded-row > td,
.table-striped tbody > tr.expanded-row > th {
    background-color: #f5f5f5;
}

.table-hover tbody tr.expanded-row:hover > td,
.table-hover tbody tr.expanded-row:hover > th {
    background-color: #ffefd5;
}

tr.expanded-toolbar .btn {
    margin-left: 2px;
    margin-right: 2px;
}

.content.modalpopup {
    margin: 20px 20px 20px 20px;
}

div.content.modalpopup > div > div.tab-content > div.tab-pane > form > div.container > div.row > div.span5 {
    display: none;
}

.case-connect-to-parent {
    width: 1315px;
    left: 35%;
}

.modal-wide {
    width: 1315px;
    left: 35%;
}

.img-case-locked {
    position: absolute;
    left: 8px;
    width: 12px;
    top: 8px;
}

.img-case-parent {
    position: relative;
}

label.checkbox-label-inline {
    display: inline;
}

.invoice-files li {
    list-style: none;
}

    .invoice-files li > span {
        cursor: pointer;
        font-weight: normal;
    }

    .invoice-files li.selected > span {
        font-weight: bold;
    }

.invoice-files td {
    vertical-align: top;
}

.table td.valign-middle {
    vertical-align: middle;
}

.cursor-default {
    cursor: default;
}

table .multitext input[type='text'] {
    width: 190px;
    margin-right: 5px;
}

table .multitext i {
    cursor: pointer;
}

.pb5 {
    padding-bottom: 5px !important;
}

a.export-order {
    background: url(../icons/doc-download.png) no-repeat;
    display: block;
    width: 15px;
    height: 20px;
    margin-bottom: -7px;
}

.brdbottom {
    border-bottom: 1px solid #eee;
}

.toplabel {
    padding: 5px 5px 0px 10px;
    word-wrap: break-word;
}


.tableth2x {
    width: 2%;
}

.tableth4x {
    width: 4%;
}

.tableth5x {
    width: 5%;
}

.tableth6x {
    width: 6%;
}


.tableth7x {
    width: 7%;
}

.tableth8x {
    width: 8%;
}

.tableth9x {
    width: 9%;
}

.tableth16x {
    width: 16%;
}

.tableth18x {
    width: 18%;
}

.tableth20x {
    width: 20%;
}

td > div.checkbox.commun {
    line-height: 20px;
    padding-left: 40px;
}

.attachedFile {
    background-image: url(../icons/clip.png);
    background-position: 2px 1px;
}

ul.nav.dh-nav .newcase {
    /*font-size: 40px;*/
    color: white;
    text-align: center;
    height: 25px;
    background: none;
}
ul.nav.dh-nav .newcase a:hover{
    background-color: #204d6a!important;
}
ul.nav.dh-nav .newcase a:focus{
    background-color: #204d6a!important;
}

th.sorting_disabled
{
    background-color: #fff !important;
    background-image: none !important;
}

.input-searching {
    background: url('/content/img/ajax-loader.gif');
    background-size: cover;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: right center;
    padding-right: 20px;
    border: none;
    display: inline-block;
}

.subddMenu {
    overflow-x: hidden;
    overflow-y: auto;
    direction: rtl;
}

div.chosen-container.chosen-container-multi.error,
div.chosen-container.chosen-container-single.error {
    border: 1px solid #ff0000;
    border-radius: 4px;
    background-color: #ffeeee;
}

div.chosen-container.chosen-container-single.error .chosen-single {
    background-color: #ffeeee;
    background: -webkit-linear-gradient(top, #ffeeee 20%, #ffeeee 50%, #ffeeee 52%, #ffeeee 100%);
}

.dh-success {
    background: #dff0d8;
    border-color: #d6e9c6;
    color: #3c763d;
    padding: 15px;
    margin: 20px 0;
    border-radius: 4px;
}

.dh-error {
    background: #f2dede;
    border-color: #ebccd1;
    color: #a94442;
    padding: 15px;
    margin: 20px 0;
    border-radius: 4px;
}
.dh-note {
    font-weight: bold;
    color: #a94442;
}

.lock-icon, .unlock-icon {
    width: 20px !important;
    height: 20px !important;
    border: none;
    display: inline-block;
}

.lock-icon {
    background: url('/content/icons/lock.png');
}

.unlock-icon {
    background: url('/content/icons/unlock.png');    
}

#tooltip-button-wrapper .btn[disabled] {
    pointer-events: none;
}

